Bug 128577 - Opening two files (each separately) from iOS file manager behaves not correctly
Summary: Opening two files (each separately) from iOS file manager behaves not correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
: 124970 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-04 08:26 UTC by Nicolas Christener
Modified: 2019-12-13 18:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-11-04 08:26:00 UTC
Description:
When using the iOS file manager it is not possible to open two separate files in a row. When opening the second file, the first file will be shown.

Steps to Reproduce:
1. Open the iOS file manager
2. Navigate to a folder where you have (at least) two different office files
3. Open the first file using the iOS LibreOffice app
4. Switch back to the file manager
5. Open the second file using the iOS LibreOffice app

Actual Results:
The first fill will be show instead of the second one.

Expected Results:
The second file will be shown.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 How can I remove my account? 2019-11-04 09:46:21 UTC
Looking into this now.
Comment 2 How can I remove my account? 2019-11-04 10:02:22 UTC
What happens when opening a document from the Files app is that the CO app's AppDelegate's -[application:openURL:options:] method is invoked. What is needed to fix this bug is to check in that whether a document is already open, and in that case close that properly first, before opening the new one.
Comment 3 Andreas Gruhler 2019-11-04 12:24:06 UTC
*** Bug 124970 has been marked as a duplicate of this bug. ***
Comment 4 How can I remove my account? 2019-11-04 12:39:49 UTC
Suggested fix in https://gerrit.libreoffice.org/#/c/82007/

(And now I notice that I almost fixed this already back in May, for bug #124970.)
Comment 5 Commit Notification 2019-11-04 14:26:19 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/commit/9d6c1744624639df75b29bc3b2b72b915b064ed3

tdf#128577: Close an already open document when asked to open a new one
Comment 6 Nicolas Christener 2019-11-20 12:57:52 UTC
Tested in 4.2.20.

The problem is fixed, I think this issue can be closed.

@Tor: could you make the fix available in 4.1.x as well?

Thanks a lot to the Collabora team and especiall Tor for taking care of this!
Comment 7 How can I remove my account? 2019-11-20 13:39:14 UTC
The fix is already in the collabora-online-4 branch. (4.1.x) That is where it was worked on initially, and later then applied to the master branch also
Comment 8 Nicolas Christener 2019-12-13 16:51:01 UTC
This can be closed as fixed.