ios/ios.mm
@@ -18,7 +18,7 @@ extern "C" {
 }
 
 int loolwsd_server_socket_fd = -1;
-lok::Document *lok_document;
+lok::Document *lok_document = nullptr;
 LibreOfficeKit *lo_kit;
 std::mutex lokit_main_mutex;
 
